--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link href="css/css.css" rel="stylesheet">
 <!--link href="css/my_css.css" rel="stylesheet" type="text/css"-->
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" crossorigin="anonymous">
-<link rel="icon" href="/media/favicon.ico">
+<link rel="icon" href="/applications/media/favicon.ico">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
 
 
@@ -34,7 +34,8 @@
 
   <div class="row" style="height: 100%">
     <div class="col-xl-9 p-3 px-md-4 mb-3">
-      <iframe id="iframe" src="http://localhost:8668/applications/9-log/9-log.html"></iframe>
+      <!-- <iframe id="iframe" src="http://localhost:8668/applications/9-log/9-log.html"></iframe> -->
+      <iframe id="iframe" src="http://localhost:8668/applications/9-log/md_comfort/md_comfort.html"></iframe>
     </div>
 
     <div class="col-xl-3" style="overflow: hidden">
