2021 10 04 работают обе модели

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
   <div class="row" style="height: 100%">
     <div class="col-xl-9 p-3 px-md-4 mb-3">
-      <!-- <iframe id="iframe" src="http://localhost:8668/applications/9-log/9-log.html"></iframe> -->
-      <iframe id="iframe" src="http://localhost:8668/applications/9-log/md_comfort/md_comfort.html"></iframe>
+      <iframe id="iframe" src="http://localhost:8668/applications/9-log/9-log.html"></iframe>
+      <!-- <iframe id="iframe" src="http://localhost:8668/applications/9-log/md_comfort/md_comfort.html"></iframe> -->
     </div>
 
     <div class="col-xl-3" style="overflow: hidden">
@@ -53,8 +53,8 @@
           <span class="menu_4but" id="rotation_m"><i class="fas fa-camera"></i></span>
           <span class="menu_4but"  data-toggle="dropdown" id="m_model"><i class="fas fa-list-ul"></i></span>
             <div class="dropdown-menu" >
-              <a class="dropdown-item" href="#">Магнолия</a>
-              <a class="dropdown-item" href="#">Арарат</a>
+              <a class="dropdown-item"  href="http://localhost:8668/applications/9-log/index.html">Базовая</a>
+              <a class="dropdown-item" href="http://localhost:8668/applications/md_comfort/index.html">Комфорт</a>
             </div>
         </div>
       </div>
